<resources>

    <string name="app_name">HISAB</string>
    <string name="user_id">kaushalagarwal</string>
    <string name="user_pass">helloworld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="transaction"><font fgcolor="#111111">Transaction</font></string>
    <string name="receiptofcash"><u>Receipts of Cash</u></string>
    <string name="paymentofcash"><u>Payment of Cash</u></string>
    <string name="sde">Selling &amp; Distribution Expenses: <b><i>Fix</i></b> \n\n<b><i>Var</i></b></string>
    <string name="ae">Admin Expenses: <b><i>Fix</i></b>\n\n\n<b><i>Var</i></b></string>
    <string name="sms_api_key">xSQhL++/sKI-QWr6SKbf1rRnaloDVVDZVvWQxuJFvG</string>
    <string name="fb">Budget that adjusts or flexes with changes in volume or activity\n\nFind out your company’s financial performance in \"<b>what if</b>\" scenario!
    </string>
    <string name="cb">Cash inflows and outflows over a specific period of time\n\nDoes your company has enough cash to pay bills when they come due?</string>
    <string name="cat1">Home Utilities</string>
    <string name="cat2">Grocery</string>
    <string name="cat3">Electronics</string>
    <string name="cat4">Beverages</string>
    <string name="cat5">Samagri</string>
    <string name="cat6">Personal Care</string>
    <string name="cat7">Kids Utilities</string>
    <string name="cat8">Stationery</string>
    <string name="cat9">Medical Care</string>
    <string name="cat10">Others</string>

    <string-array name="types_array">
        <item>Purchase</item>
        <item>Sales</item>
        <item>Purchase Return</item>
        <item>Sales Return</item>
        <item>Payment Done</item>
        <item>Payment Received</item>
        <item>Commission</item>
        <item>Drawings</item>
    </string-array>

    <string-array name="pay_types">
        <item>Rent</item>
        <item>Salary</item>
        <item>Settlement</item>
    </string-array>

    <string-array name="drawing_types">
        <item>Cash</item>
        <item>Bank</item>
        <item>Goods</item>
    </string-array>

    <string-array name="inventory_categories">
        <item>@string/cat1</item>
        <item>@string/cat2</item>
        <item>@string/cat3</item>
        <item>@string/cat4</item>
        <item>@string/cat5</item>
        <item>@string/cat6</item>
        <item>@string/cat7</item>
        <item>@string/cat8</item>
        <item>@string/cat9</item>
        <item>@string/cat10</item>
    </string-array>

    <string-array name="inventory_tags">
        <item>brush</item>
        <item>groceries</item>
        <item>processor</item>
        <item>milk_bottle</item>
        <item>om</item>
        <item>lipstick</item>
        <item>feeding</item>
        <item>stationery</item>
        <item>antibiotic</item>
        <item>shopping_bag</item>
    </string-array>
    <string name="title_activity_networking_shops_view_map">NetworkingShopsViewMap</string>
    <string name="title_activity_accounts_main">AccountsMain</string>

    <string-array name="months_spinner">
        <item>Choose month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
