<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Inventory.InventoryAdd">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Product Name*"
                    android:textColor="@color/black" />

                <AutoCompleteTextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray"
                    android:inputType="textCapCharacters"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.5"
                    android:text="Product Cost*"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"></LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Quantity*"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"></LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="Threshold"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <EditText
                    android:id="@+id/product_rate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.5"
                    android:background="@color/lightGray"
                    android:inputType="number|numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"></LinearLayout>

                <EditText
                    android:id="@+id/product_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/lightGray"
                    android:inputType="number|numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"></LinearLayout>

                <EditText
                    android:id="@+id/product_threshold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/lightGray"
                    android:inputType="number|numberDecimal"
                    android:padding="10dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"
                android:paddingRight="15dp"
                android:text="Tags"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/product_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp">


                <RadioButton
                    android:id="@+id/cat1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat1" />

                <RadioButton
                    android:id="@+id/cat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat2" />

                <RadioButton
                    android:id="@+id/cat4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat4" />

                <RadioButton
                    android:id="@+id/cat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat3" />

                <RadioButton
                    android:id="@+id/cat6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat6" />

                <RadioButton
                    android:id="@+id/cat5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat5" />

                <RadioButton
                    android:id="@+id/cat7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat7" />

                <RadioButton
                    android:id="@+id/cat8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat8" />

                <RadioButton
                    android:id="@+id/cat9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/cat9" />

                <RadioButton
                    android:id="@+id/cat10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:padding="5dp"
                    android:text="@string/cat10" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Product Expiry"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/product_expiry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="Tap to set date"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/update_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary"
                android:text="UPDATE"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>


    <RelativeLayout
        android:id="@+id/progressParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            app:cpb_background_progressbar_color="@color/gray"
            app:cpb_background_progressbar_width="3dp"
            app:cpb_progressbar_color="@color/black"
            app:cpb_progressbar_width="3dp" />

    </RelativeLayout>




</RelativeLayout>